--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=els
-spring.datasource.url=jdbc:mysql://localhost:3306/springdb?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.url=jdbc:mysql://localhost:3306/els?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=mhg1018!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate 설정 (옵션)
