--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=els
-spring.datasource.url=jdbc:mysql://localhost:3306/els?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=mhg1018!
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=scott
+spring.datasource.password=tiger
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate 설정 (옵션)
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 spring.config.import=optional:application-secret.properties
+
+logging.level.org.elasticsearch.client=DEBUG
+logging.level.org.springframework.data.elasticsearch.core=DEBUG
